// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AvatarStack renders when there are less avatars than specified by maxStackSize 1`] = `
<div
  className="wds-avatar-stack"
>
  <Avatar
    alt="User"
    badge="sysop"
    key="0"
    link="some.link"
    src="some.url"
  />
  <Avatar
    alt="Other user"
    key="1"
    link="some.other.link"
    src="some.other.url"
  />
  0
</div>
`;

exports[`AvatarStack renders when there are more avatars than specified by maxStackSize 1`] = `
<div
  className="wds-avatar-stack"
>
  <Avatar
    alt="User"
    badge="sysop"
    key="0"
    link="some.link"
    src="some.url"
  />
  <div
    className="wds-avatar-stack__overflow"
  >
    +1
  </div>
</div>
`;

exports[`AvatarStack renders with default props 1`] = `
<div
  className="wds-avatar-stack"
>
  <Avatar
    alt="User"
    badge="sysop"
    key="0"
    link="some.link"
    src="some.url"
  />
  <Avatar
    alt="Other user"
    key="1"
    link="some.other.link"
    src="some.other.url"
  />
  0
</div>
`;

exports[`AvatarStack renders with hideOverflow set to true 1`] = `
<div
  className="wds-avatar-stack"
>
  <Avatar
    alt="User"
    badge="sysop"
    key="0"
    link="some.link"
    src="some.url"
  />
</div>
`;

exports[`AvatarStack renders with overrideCount 1`] = `
<div
  className="wds-avatar-stack"
>
  <Avatar
    alt="User"
    badge="sysop"
    key="0"
    link="some.link"
    src="some.url"
  />
  <Avatar
    alt="Other user"
    key="1"
    link="some.other.link"
    src="some.other.url"
  />
  0
</div>
`;
